# ros2-vicon-receiver

./: .gitignore  README.md  install_libs.sh
vicon_receiver/: CMakeLists.txt  package.xml
vicon_receiver/include/vicon_receiver/: communicator.hpp  publisher.hpp
vicon_receiver/launch/: client.launch.py  client_remap.launch.py
vicon_receiver/src/vicon_receiver/: communicator.cpp  publisher.cpp
